--- a/ProgrammingInBlazorASPNETCore5/BlazorMovies/BlazorMovies/Client/Shared/IndividualMovie.razor
+++ b/ProgrammingInBlazorASPNETCore5/BlazorMovies/BlazorMovies/Client/Shared/IndividualMovie.razor
@@ -1,6 +1,20 @@
 ﻿<p>Title: @Movie.Title</p>
 <p>Release Date: @Movie.ReleaseDate.ToString("yyyy-MM-dd")</p>
+@if (DisplayButtons)
+{
+    <div>
+        <button @onclick="@(()=>DeleteMovie.InvokeAsync(Movie))">Delete</button>
+    </div>
+}
 
 @code {
     [Parameter] public Movie Movie { get; set; }
+    [Parameter] public bool DisplayButtons { get; set; } = false;
+    //call Method from the parent component where this child component has been called
+    [Parameter] public EventCallback<Movie> DeleteMovie { get; set; }
+
+    void Delete()
+    {
+        Console.WriteLine($"Deleting ${Movie.Title}");
+    }
 }
