--- a/ProgrammingInBlazorASPNETCore5/BlazorMovies/BlazorMovies/Client/Pages/People/EditPerson.razor
+++ b/ProgrammingInBlazorASPNETCore5/BlazorMovies/BlazorMovies/Client/Pages/People/EditPerson.razor
@@ -1,5 +1,21 @@
 ﻿@page "/person/edit/{PersonId:int}"
 
+<h3>Edit Person</h3>
+
+<PersonForm Person="Person" OnValidSubmit="Edit" />
+
 @code {
-    [Parameter] public int personId { get; set; }
+        [Parameter] public int PersonId { get; set; }
+
+        Person Person;
+
+    protected override void OnInitialized()
+    {
+        Person = new Person() {Id = 1, DateOfBirth = DateTime.Now, Name = "Person" };
+    }
+
+    private void Edit() 
+    {
+        Console.WriteLine("Edit Person");
+    }
 }
