--- a/ProgrammingInBlazorASPNETCore5/BlazorMovies/BlazorMovies/Client/Pages/People/IndexPeople.razor
+++ b/ProgrammingInBlazorASPNETCore5/BlazorMovies/BlazorMovies/Client/Pages/People/IndexPeople.razor
@@ -2,6 +2,10 @@
 
 <h3>People</h3>
 
+<div class="form-group">
+    <a class="btn btn-info" href="person/create">Create New Person</a>
+</div>
+
 @code {
 
 }
