--- a/ProgrammingInBlazorASPNETCore5/BlazorMovies/BlazorMovies/Client/_Imports.razor
+++ b/ProgrammingInBlazorASPNETCore5/BlazorMovies/BlazorMovies/Client/_Imports.razor
@@ -11,3 +11,4 @@
 @*usings here are applied to all the razor filesa*@
 @using BlazorMovies.Client.Helpers;
 @using BlazorMovies.Shared.Entities;
+@using BlazorMovies.Client.Repository;
