--- a/ProgrammingInBlazorASPNETCore5/BlazorMovies/BlazorMovies/Client/Pages/Genres/CreateGenre.razor
+++ b/ProgrammingInBlazorASPNETCore5/BlazorMovies/BlazorMovies/Client/Pages/Genres/CreateGenre.razor
@@ -1,25 +1,24 @@
 ﻿@page "/genre/create"
+@inject IGenreRepository repository
+@inject NavigationManager navigationManager
 
 <h3>Create Genre</h3>
 
-<EditForm Model="genre" OnValidSubmit="Create">
-    <DataAnnotationsValidator />
-    <div class="form-group">
-        <label>Name: </label>
-        <div>
-            <InputText class="form-control" @bind-Value="@genre.Name" />
-            <ValidationMessage For="@(() => genre.Name)" />
-        </div>
-    </div>
-
-    <button class="btn btn-success" type="submit">Save Changes</button>
-</EditForm>
+<GenreForm Genre="genre" OnValidSubmit="Create" />
 
 @code {
     private Genre genre = new Genre();
 
-    private void Create()
+    private async Task Create()
     {
-        Console.WriteLine(genre.Name);
+        try
+        {
+            await repository.CreateGenre(genre);
+            navigationManager.NavigateTo("genres");
+        }
+        catch (Exception ex)
+        {
+            Console.WriteLine(ex.Message);
+        }
     }
 }
