--- a/ProgrammingInBlazorASPNETCore5/BlazorMovies/BlazorMovies/Client/Pages/Genres/EditGenre.razor
+++ b/ProgrammingInBlazorASPNETCore5/BlazorMovies/BlazorMovies/Client/Pages/Genres/EditGenre.razor
@@ -1,5 +1,22 @@
 ﻿@page "/genre/edit/{GenreId:int}"
 
+@if (genre != null)
+{
+    <GenreForm Genre="genre" OnValidSubmit="Edit" />
+}
+
 @code {
     [Parameter] public int GenreId { get; set; }
+
+    public Genre genre;
+
+    protected override void OnInitialized()
+    {
+        genre = new Genre() { Id = GenreId, Name = "Comedy" };
+    }
+
+    private void Edit() 
+    {
+        Console.WriteLine($"Edit Method: Id:{genre.Id}, Name: {genre.Name}");
+    }
 }
