--- a/ProgrammingInBlazorASPNETCore5/BlazorMovies/BlazorMovies/Client/Pages/Index.razor
+++ b/ProgrammingInBlazorASPNETCore5/BlazorMovies/BlazorMovies/Client/Pages/Index.razor
@@ -1,10 +1,17 @@
 ﻿@page "/"
+@page "/index"
 @inject IRepository repository
 
 <div>
     <h3>Movies</h3>
     <MoviesList Movies="movies" />
 </div>
+
+<CustomTypeahead SearchMethod="SearchMethod">
+    <ResultTemplate>
+        @context
+    </ResultTemplate>
+</CustomTypeahead>
 
 @code{
 
@@ -14,5 +21,15 @@
     protected override async Task OnInitializedAsync()
     {
         movies = repository.GetMovies();
+    }
+
+    private async Task<IEnumerable<string>> SearchMethod(string searchText)
+    {
+        await Task.Delay(2000);
+        if (searchText == "test")
+        {
+            return Enumerable.Empty<string>();
+        }
+        return new List<string>() { "Felipe", "Gavilanch2"};
     }
 }
