--- a/ProgrammingInBlazorASPNETCore5/BlazorMovies/BlazorMovies/Client/Pages/Movies/CreateMovie.razor
+++ b/ProgrammingInBlazorASPNETCore5/BlazorMovies/BlazorMovies/Client/Pages/Movies/CreateMovie.razor
@@ -1,13 +1,22 @@
 ﻿@page "/movie/create"
-@inject NavigationManager navigationManager
 
 <h3>Create Movie</h3>
 
-<button class="btn btn-primary" @onclick="SaveMovie"></button>
+<MovieForm Movie="Movie" OnValidSubmit="SaveMovie" NotSelectedGenres="NotSelectedGenres"/>
 
 @code {
-    private void SaveMovie() 
+    private Movie Movie = new Movie();
+
+    private List<Genre> NotSelectedGenres = new List<Genre>()
     {
-        navigationManager.NavigateTo("movie");
+        new Genre() {Id = 1, Name = "Action" },
+        new Genre() {Id = 2, Name = "Comedy" },
+        new Genre() {Id = 3, Name = "Drama" }
+    };
+
+
+    private void SaveMovie()
+    {
+        Console.WriteLine("Save Movie");
     }
 }
