--- a/ProgrammingInBlazorASPNETCore5/BlazorMovies/BlazorMovies/Client/Shared/NavMenu.razor
+++ b/ProgrammingInBlazorASPNETCore5/BlazorMovies/BlazorMovies/Client/Shared/NavMenu.razor
@@ -23,6 +23,11 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
+            <NavLink class="nav-link" href="/movie/search">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Search Movies
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
             <NavLink class="nav-link" href="genres">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Genres
             </NavLink>
@@ -33,7 +38,7 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="movies/create">
+            <NavLink class="nav-link" href="movie/create">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Create A Movie
             </NavLink>
         </li>
