--- a/ProgrammingInBlazorASPNETCore5/BlazorMovies/BlazorMovies/Client/Shared/MoviesList.razor
+++ b/ProgrammingInBlazorASPNETCore5/BlazorMovies/BlazorMovies/Client/Shared/MoviesList.razor
@@ -1,4 +1,5 @@
 ﻿@inject IJSRuntime js
+@inject IMoviesRepository moviesRepository
 
 <div class="movies-container">
     <GenericList List="Movies">
@@ -17,6 +18,7 @@
         var confirmed = await js.Confirm($"Are You Sure You Want To Delete {movie.Title} ?");
         if (confirmed)
         {
+            await moviesRepository.DeleteMovie(movie.Id);
             Movies.Remove(movie);
         }
     }
