blazor authorization and authentication

--- a/ProgrammingInBlazorASPNETCore5/BlazorMovies/BlazorMovies/Client/Pages/People/IndexPeople.razor
+++ b/ProgrammingInBlazorASPNETCore5/BlazorMovies/BlazorMovies/Client/Pages/People/IndexPeople.razor
@@ -7,6 +7,8 @@
     <a class="btn btn-info" href="person/create">Create New Person</a>
 </div>
 
+<Pagination CurrentPage="@paginationDTO.Page" TotalAmountPages="totalAmountPages" SelectedPage="SelectedPage" />
+
 <GenericList List="people">
     <WholeListTemplate>
         <table class="table table-striped">
@@ -22,7 +24,7 @@
                     <tr>
                         <td>
                             <a class="btn btn-success" href="/person/edit/@item.Id">Edit</a>
-                            <button class="btn btn-danger"@onclick="@(() => DeletePerson(item.Id))">Delete</button>
+                            <button class="btn btn-danger" @onclick="@(() => DeletePerson(item.Id))">Delete</button>
                         </td>
                         <td>@item.Name</td>
                     </tr>
@@ -34,15 +36,14 @@
 
 @code {
     List<Person> people;
-    PaginationDTO paginationDTO = new PaginationDTO();
+    PaginationDTO paginationDTO = new PaginationDTO() { RecordsPerPage = 2 };
+    private int totalAmountPages;
 
     protected override async Task OnInitializedAsync()
     {
         try
         {
-            var paginatedResponse = await repository.GetPeople(paginationDTO);
-            people = paginatedResponse.Response;
-            Console.WriteLine(paginatedResponse.TotalAmountPages);
+            await LoadPeople();
         }
         catch (Exception ex)
         {
@@ -50,11 +51,22 @@
         }
     }
 
+    private async Task LoadPeople()
+    {
+        var paginatedResponse = await repository.GetPeople(paginationDTO);
+        people = paginatedResponse.Response;
+        totalAmountPages = paginatedResponse.TotalAmountPages;
+    }
+
+    private async Task SelectedPage(int page)
+    {
+        paginationDTO.Page = page;
+        await LoadPeople();
+    }
+
     private async Task DeletePerson(int Id)
     {
         await repository.DeletePerson(Id);
-        var paginatedResponse = await repository.GetPeople(paginationDTO);
-        people = paginatedResponse.Response;
-        Console.WriteLine(paginatedResponse.TotalAmountPages);
+        await LoadPeople();
     }
 }
