--- a/ProgrammingInBlazorASPNETCore5/BlazorMovies/BlazorMovies/Client/Pages/Movies/DetailsMovie.razor
+++ b/ProgrammingInBlazorASPNETCore5/BlazorMovies/BlazorMovies/Client/Pages/Movies/DetailsMovie.razor
@@ -23,16 +23,16 @@ else
             @linkGenre(model.Genres[i])
         }
     }
-    
+
     <text> | </text> <span>@model.Movie.ReleaseDate.Value.ToString("yyyy-MM-dd")</span>
 
     <div style="display: flex">
         <span style="display: inline-block; margin-right: 5px;">
-            <img src="@model.Movie.Poster" style="width: 225px; height: 315px;"/>
+            <img src="@model.Movie.Poster" style="width: 225px; height: 315px;" />
         </span>
-        <iframe width="560" height="315" 
-                src="https://www.youtube.com/embed/@model.Movie.Trailer" frameborder="0" 
-                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture;" 
+        <iframe width="560" height="315"
+                src="https://www.youtube.com/embed/@model.Movie.Trailer" frameborder="0"
+                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture;"
                 allowfullscreen></iframe>
     </div>
     <div style="margin-top: 10px;">
@@ -46,14 +46,14 @@ else
         <div style="display: flex; flex-direction: column">
             @foreach (var actor in model.Actors)
             {
-            <div style="margin-bottom: 2px;">
-                <img style="width: 50px;" src="@actor.Picture" />
-                <span style="display: inline-block; width: 200px;">
-                    <a href="/person/@actor.Id/@actor.Name.Replace(" ", "-")">@actor.Name</a>
-                </span>
-                <span style="display: inline-block; width: 45px;">...</span>
-                <span>@actor.Character</span>
-            </div>
+                <div style="margin-bottom: 2px;">
+                    <img style="width: 50px;" src="@actor.Picture" />
+                    <span style="display: inline-block; width: 200px;">
+                        <a href="/person/@actor.Id/@actor.Name.Replace(" ", "-")">@actor.Name</a>
+                    </span>
+                    <span style="display: inline-block; width: 45px;">...</span>
+                    <span>@actor.Character</span>
+                </div>
             }
         </div>
     </div>
@@ -62,8 +62,8 @@ else
 @code {
     [Parameter] public int MovieId { get; set; }
     [Parameter] public string MovieName { get; set; }
-    private RenderFragment<Genre> linkGenre = (genre) =>@<a href="movies/search?genreId=@genre.Id">@genre.Name</a>;
-DetailsMovieDTO model;
+    private RenderFragment<Genre> linkGenre = (genre) =>@<a href="movie/search?genreId=@genre.Id">@genre.Name</a>;
+    DetailsMovieDTO model;
 
     protected override async Task OnInitializedAsync()
     {
