--- a/ProgrammingInBlazorASPNETCore5/BlazorMovies/BlazorMovies/Client/_Imports.razor
+++ b/ProgrammingInBlazorASPNETCore5/BlazorMovies/BlazorMovies/Client/_Imports.razor
@@ -13,3 +13,4 @@
 @using BlazorMovies.Shared.Entities;
 @using BlazorMovies.Client.Repository;
 @using BlazorMovies.Shared.DTOs;
+@using Microsoft.AspNetCore.Components.Authorization;
